[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/SquishPlatform/MoveableBlock_Animate_4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SquishPlatform.gd" type="Script" id=2]
[ext_resource path="res://Art/SquishPlatform/MoveableBlock_Animate_3.png" type="Texture" id=3]
[ext_resource path="res://Art/SquishPlatform/MoveableBlock_Animate_2.png" type="Texture" id=4]
[ext_resource path="res://Art/SquishPlatform/MoveableBlock_Animate_1.png" type="Texture" id=5]
[ext_resource path="res://Art/SquishPlatform/MoveableBlock_Idle.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 13 )

[node name="SquishPlatform" type="KinematicBody2D" groups=["HammerInteract"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="MoveTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ResetTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="MoveTime" to="." method="_on_MoveTime_timeout"]
[connection signal="timeout" from="ResetTime" to="." method="_on_ResetTime_timeout"]
